shake works with ncurses

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,8 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 
 add_executable(Shake
-        constant.h
         main.cpp
-        pixel.cpp
-        pixel.h
+        Pixel.cpp
+        Pixel.h
         Shake.cpp
-        Shake.h Game.cpp Game.h Graphic.cpp Graphic.h Ncurses.cpp Ncurses.h)
+        Shake.h Game.cpp Game.h Graphic.cpp Graphic.h Ncurses.cpp Ncurses.h GameConstants.h)
